--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,133 +1,291 @@
-:root{
-  --color-primario:#3277f6;
-  --color-secundario:#61646d;
-  --color-terciario:#A8A9B0;
-  --color-bg-primario:#f5f5f6;
-  --color-bg-secundario:#35373e;
+/* Variables */
+/* :root, me indica que van a funcionar como un grupo de reglas */
+:root {
+    /* --nombrevariable:valor */
+    --color1: #18db70;
+    --color2: #9e3bdb;
 }
 
-*{
-  margin:0;
-  padding:0;
-  box-sizing: border-box;
-  font-family: 'Open Sans', sans-serif;
+/* *, es un selector que aplica a todo, en este caso a todo lo que este dentro del body */
+* {
+    margin: 0;
+    padding: 0;
+    /* arreglo temporal */
+    /* border:grosor tipo color */
+    /*border: 1px solid red;*/
+    /* indica que el tamaño que nosotros indicamos ya sea para ancho o altura considere contenido + padding + borde */
+    box-sizing: border-box;
+    /* cambiar la fuente de todo */
+    /* en caso Open sans no se encuentre, cargará sans-serif */
+    font-family: "Open Sans", sans-serif;
 }
 
-li{
-  text-decoration: none;
-  list-style-type: none;
-  padding:10px;
+/* clases reutilizables o generales */
+
+header {
+    color: white;
+    position: relative;
+    min-height: 850px; /*img tendrá un absolute*/
 }
 
-body{
-  display:flex;
-  max-height:100vh;
+section {
+    padding: 30px 0;
 }
 
-.raiz{
-  width:75%;
+button {
+    /*forma*/
+    border-radius: 20px;
+    max-height: 40px;
+    padding: 10px 20px;
 }
 
-.raiz > nav {
-  height:54px;
-  padding:15px;
-  color:var(--color-secundario)
+h2 {
+    font-weight: 400;
+    margin: 40px 0;
+    font-size: 32px;
 }
 
-.principal{
-  background-color: var(--color-bg-primario);
-  display:flex;
+input {
+    display: block;
+    width: 100%;
+    padding: 10px;
+    margin: 10px 0;
+    border-radius: 10px;
 }
 
-.menu{
-  width:20%;
+.btn-white {
+    background-color: transparent;
+    color: white;
+    border: 1px solid white;
 }
 
-#contenido{
-  display:grid;
-  grid-template-columns: repeat(4,minmax(150px, 1fr));
-  grid-template-rows: repeat(4,minmax(150px, 1fr));
-  gap:25px;
-  padding:25px;
+/* cuando el mouse este encima de estos elementos */
+.btn-white:hover {
+    background-color: white;
+    color: gray;
+    /* para que el icono del puntero cambie */
+    cursor: pointer;
 }
 
-.imagen{
-  height:250px;
-  overflow:hidden;
+.btn_verde {
+    background-color: var(--color1);
+    border: 1px solid var(--color1);
+    color: white;
+    margin-top: 20px;
 }
 
-.imagen > img{
-  max-width: 100%;
-  object-fit: cover;
-  object-position: center;
-  border-radius: 5px;
-  min-height: 100%;
+.btn_verde:hover {
+    background-color: transparent;
+    color: var(--color1);
 }
 
-.texto{
-  padding:10px;
-  color:var(--color-secundario);
+.gradiente {
+    /* linear-gradient(angulo, color1, color2) */
+    background-image: linear-gradient(45deg, var(--color1), var(--color2));
 }
 
-.texto *{
-  padding:2px;
+.contenedor {
+    max-width: 1000px;
+    /* centrar horizontalmente este contenedor */
+    /* margin: arribayabajo costados */
+    margin: 0 auto;
 }
 
-.precio{
-  display:flex;
-  justify-content: space-between;
-  align-items: center;
+.img_apps {
+    position: absolute;
+    bottom: 0;
 }
 
-.btn-agregar{
-  background-color: var(--color-primario);
-  color:white;
-  padding:10px;
-  border:none;
+/* NUNCA UTILICEN INLINE, INLINE-BLOCK */
+
+/* NAVEGACIÓN */
+
+.navegacion {
+    display: flex;
+    justify-content: space-between;
 }
 
-.carrito{
-  width:25%;
-  background-color: var(--color-bg-secundario);
-  color:var(--color-terciario);
-  padding:30px;
+/* todos los elementos ul dentro de .navegacion */
+/* .navegacion ul */
+.links {
+    display: flex;
+    /* flex-direction:row, por default */
+    /* list-style-type, indica el tipo de viñeta, es removerla al ponerle none */
+    list-style-type: none;
+    align-items: center;
 }
 
-#fecha{
-  text-align: center;
-  padding-bottom: 30px;
+.links li {
+    margin: 0 10px;
 }
 
-.carrito > table{
-  width:100%;
-  /* espaciado entre las celdas */
-  border-spacing: 0;
+/* 	HERO */
+
+.hero {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 80px;
 }
 
-.carrito th,td{
-  padding:20px;
-  text-align: center;
-  border-bottom: 1px solid var(--color-secundario);
+.hero h1,
+h5 {
+    margin: 10px;
 }
 
-.resumen > table{
-  width:100%;
-  border-spacing: 0;
+.hero h1 {
+    /* text-align me permite indicar la alineación del texto */
+    text-align: center;
+    font-weight: 700;
+    font-size: 54px;
 }
 
-#btn-pagar{
-  display:block;
-  margin:20px auto;
-  border-radius:10px;
-  width:90%;
-  height:70px;
-  color:white;
-  background-color: var(--color-primario);
-  border:0;
-  font-size: 20px;
-  letter-spacing: 4px;
+/* CARACTERISTICAS */
+
+.caracteristicas h2 {
+    /* Texto */
+    text-align: center;
 }
 
-button:hover{
-  font-weight: bold;
+.tarjetas {
+    display: flex;
+}
+
+.tarjeta {
+    margin: 10px;
+    padding: 40px 50px;
+    border-radius: 10px;
+    /* box-shadow: despX despY difuminado color */
+    box-shadow: 0 0 20px gray;
+}
+
+/* todos los elementos que esten dentro de .tarjeta */
+.tarjeta * {
+    margin: 5px 0;
+}
+
+.tarjeta img {
+    width: 60px;
+}
+
+.tarjeta p {
+    font-size: 14px;
+    /* line-height - indica el espaciado entre lineas de texto */
+    line-height: 32px;
+}
+
+/* pseudoclase */
+/* nth-of-type(numero) */
+.tarjeta:nth-of-type(2) {
+    color: white;
+}
+
+/* FUNCIONALIDADES */
+
+.funcionalidades {
+    display: flex;
+}
+
+/* , funciona como y */
+.func_descripcion,
+.func_imagen {
+    padding: 20px;
+    max-width: 50%;
+}
+
+.func_imagen img {
+    max-width: 100%;
+}
+
+/* REGISTRARSE */
+.registrate {
+    /* .. salir de la carpeta */
+    background-image: url("../assets/img/background2.webp");
+    background-size: cover;
+    background-position: center;
+    color: white;
+    padding: 50px;
+    position: relative;
+}
+
+.mascara {
+    height: 100%;
+    width: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    /*opacity: 0 a 1*/
+    opacity: 0.5;
+}
+
+.accion {
+    position: relative;
+}
+
+/* Modal */
+.modal {
+    display: none; /*quiero que este escondido*/
+    position: fixed;
+    left: 0;
+    top: 0;
+    z-index: 1;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    /* rgba(0-255, 0-255, 0-255, 0-1) */
+    background-color: rgba(0, 0, 0, 0.4);
+}
+
+.modal-content {
+    background-color: white;
+    padding: 20px;
+    margin: auto;
+    border: 1px solid gray;
+    width: 80%;
+}
+
+.busqueda {
+    padding: 40px;
+    display: flex;
+}
+
+.canciones {
+    width: 100%;
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.cancion-container {
+    padding: 20px;
+    max-width: 20%;
+    /* height: 600px; */
+    /* overflow-y: auto; */
+}
+
+.cancion {
+    background-color: white;
+    padding: 20px;
+    border-radius: 10px;
+    box-shadow: 0 0 10px gray;
+}
+
+.cancion-content {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.cancion-img img {
+    width: 100%;
+}
+
+audio {
+    width: 100%;
+}
+
+/* -------------media queries----------------- */
+@media screen and (max-width: 800px) {
+    .tarjetas {
+        flex-direction: column;
+    }
 }
